[workspace]

members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
mkpath-core = { path = "crates/mkpath-core" }
mkpath-grid = { path = "crates/mkpath-grid" }
mkpath-jps = { path = "crates/mkpath-jps" }
mkpath-cpd = { path = "crates/mkpath-cpd" }

[package]
name = "mkpath"
version = "0.1.0"
edition = "2021"

[dependencies]
mkpath-core = { workspace = true }
mkpath-grid = { workspace = true }
mkpath-jps = { workspace = true }
mkpath-cpd = { workspace = true }

[dev-dependencies]
rayon = "1.9.0"
structopt = "0.3.26"
