[workspace]

members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
mkpath-core = { path = "crates/mkpath-core" }
mkpath-grid = { path = "crates/mkpath-grid" }
mkpath-jps = { path = "crates/mkpath-jps" }
mkpath-cpd = { path = "crates/mkpath-cpd" }
mkpath-grid-gb = { path = "crates/mkpath-grid-gb" }
mkpath-ess = { path = "crates/mkpath-ess" }
mkpath-tdh = { path = "crates/mkpath-tdh" }

[package]
name = "mkpath"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
mkpath-core = { workspace = true }
mkpath-grid = { workspace = true }
mkpath-jps = { workspace = true }
mkpath-cpd = { workspace = true }
mkpath-grid-gb = { workspace = true }
mkpath-ess = { workspace = true }
mkpath-tdh = { workspace = true }

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rayon = "1.9.0"
