[package]
name = "mkpath-topping"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
enumset = "1.1.3"
mkpath-core = { workspace = true }
mkpath-cpd = { workspace = true }
mkpath-grid = { workspace = true }
mkpath-jps = { workspace = true }
rayon = "1.9.0"
